HELIO-3200 - adjust background image ref in CSS to work with asset pipeline; adjust display for anchor elements in list view

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -303,7 +303,7 @@ footer.press {
       padding-top: 2em;
 
       a {
-        display: inline-block; 
+        display: block; 
       }
 
       .thumbnail {
