HELIO-3073 Remove Beta from Fulcrum (#2694)
* HELIO-3073 Remove Beta from Fulcrum

* HELIO-3073 - tweak formatting; add feedback link to mobile nav and helio app footer

Co-authored-by: Jonathan McGlone <jmcglone@umich.edu>

--- a/app/views/shared/_brand_press_bar.html.erb
+++ b/app/views/shared/_brand_press_bar.html.erb
@@ -36,7 +36,7 @@
         <% elsif current_institutions? %>
           <%= render 'shared/institutions' %>
         <% else %>
-          <a href="/" title="Fulcrum" data-turbolinks="false"><%= image_tag "fulcrum-mark-white-30px.png", class: 'logo', alt: 'Fulcrum Beta logo' %></a> <a class="beta" href="/beta" title="Fulcrum Beta information" data-turbolinks="false">beta</a>
+          <a href="/" title="Fulcrum" data-turbolinks="false"><%= image_tag "fulcrum-mark-white-30px.png", class: 'logo', alt: 'Fulcrum logo' %></a>
         <% end %>
       </div>
     </div>
