--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
 <header id="banner" role="banner">
   <hgroup>
     <% if press_subdomain.present? %>
-      <% if press_subdomain == 'leverpress' || 'barpublishing' %>
+      <% if ['leverpress', 'barpublishing'].include? press_subdomain %>
         <%= render 'shared/brand_press_bar_custom' %>
       <% else %>
         <%= render 'shared/brand_press_bar' %>
