--- a/app/views/layouts/hyrax.html.erb
+++ b/app/views/layouts/hyrax.html.erb
@@ -16,19 +16,19 @@
   </div>
 
   <% if defined?(@press.subdomain) && !@press.new_record? %>
-    <% if ['leverpress', 'barpublishing'].include? @press.subdomain %>
+    <% if %w[leverpress barpublishing].include? @press.subdomain %>
       <%= render 'shared/brand_press_footer_custom' %>
     <% else %>
       <%= render 'shared/brand_press_footer' %>
     <% end %>
   <% elsif defined?(@presenter.subdomain) %>
-    <% if ['leverpress', 'barpublishing'].include? @presenter.subdomain %>
+    <% if %w[leverpress barpublishing].include? @presenter.subdomain %>
       <%= render 'shared/brand_press_footer_custom' %>
     <% else %>
       <%= render 'shared/brand_press_footer' %>
     <% end %>
   <% elsif defined?(@presenter.parent.subdomain) %>
-    <% if ['leverpress', 'barpublishing'].include? @presenter.parent.subdomain %>
+    <% if %w[leverpress barpublishing].include? @presenter.parent.subdomain %>
       <%= render 'shared/brand_press_footer_custom' %>
     <% else %>
       <%= render 'shared/brand_press_footer' %>
