--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -2474,6 +2474,10 @@ $barpublishing-white: #fff;
       margin-top: 0;
     }
 
+    div.facets h3 {
+      font-size: 1.2em;
+    }
+
     .navbar-nav>li {
       float: none;
     }
