--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -304,6 +304,7 @@ footer.press {
 
       a {
         display: block; 
+        overflow: auto;
       }
 
       .thumbnail {
@@ -649,7 +650,11 @@ footer.press {
     }
 
     a.toc-link {
-     max-width: 80%;
+     max-width: 100%;
+    }
+
+    a.toc-download link + a.toc-link {
+      max-width: 80%;
     }
 
     ul.toc li:first-child {
@@ -1471,8 +1476,13 @@ footer.press {
   }
 
   .monograph .monograph-assets-toc-epub {
-    a.toc-link {
+    a.toc-download link + a.toc-link {
       max-width: 65%;
+      line-height: 2em;
+    }
+
+    a.toc-link {
+      max-width: 100%;
       line-height: 2em;
     }
   }
@@ -1524,8 +1534,13 @@ footer.press {
   }
 
   .monograph .monograph-assets-toc-epub {
-    a.toc-link {
+    a.toc-download link + a.toc-link {
       max-width: 57%;
+      line-height: 1.5em;
+    }
+
+    a.toc-link {
+      max-width: 100%;
       line-height: 1.5em;
     }
   }
