--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -2512,6 +2512,16 @@ $barpublishing-white: #fff;
 
   }
 
+  @media only screen and (max-width: 1199px) {
+    .press {
+      .page_links {
+        display: block;
+        float: right;
+        padding: 10px 12px;
+      }
+    }
+  }
+  
   @media only screen and (max-width : 992px) {
     
     .navbar-header {
