Move/remove old duplicated curation_concerns layouts to hyrax
Bug fix where the score_presenter got out of sync with monographs/press_catalog expectations

The press_helper is only a factory for the press_presenter

Move banner logic to it's own banner_helper

HELIO-3311

--- a/app/views/layouts/boilerplate.html.erb
+++ b/app/views/layouts/boilerplate.html.erb
@@ -17,7 +17,7 @@
     <!-- Citation metadata for Google Scholar -->
     <%= render 'shared/metadata' %>
 
-  <% unless press_subdomain.nil? %>
+  <% if press_presenter.present? %>
     <!-- Typekit -->
     <%= render 'shared/typekit' %>
   <% end %>
@@ -80,7 +80,7 @@
 
   </head>
 
-  <%= tag.body class: press_subdomains(press_subdomain) do %>
+  <%= tag.body class: press_presenter.present? ? press_presenter.press_subdomains : '' do %>
 
     <%= content_for?(:body) ? yield(:body) : yield %>
 
