--- a/app/views/shared/_brand_press_footer_block_b.html.erb
+++ b/app/views/shared/_brand_press_footer_block_b.html.erb
@@ -1,4 +1,4 @@
-<% if footer_block_b(press_subdomain).present? %>
-  <%= footer_block_b(press_subdomain).html_safe %> 
+<% if press_presenter.footer_block_b.present? %>
+  <%= press_presenter.footer_block_b.html_safe %> 
 <% else %>
 <% end %>
