--- a/app/views/layouts/hyrax.html.erb
+++ b/app/views/layouts/hyrax.html.erb
@@ -1,7 +1,7 @@
 <% provide :body do %>
 
-<%= render 'shared/header' %>
-<%= render 'shared/flash_message' %>
+  <%= render 'shared/header' %>
+  <%= render 'shared/flash_message' %>
 
   <div id="main" role="main" class="container <%= yield(:page_class) if content_for?(:page_class)%>">
   <% if content_for?(:page_header) %>
@@ -14,21 +14,8 @@
 
     <%= content_for?(:main) ? yield(:main) : yield %>
   </div>
-
-  <% if defined?(@press.subdomain) && !@press.new_record? %>
-    <% if %w[leverpress barpublishing].include? @press.subdomain %>
-      <%= render 'shared/brand_press_footer_custom' %>
-    <% else %>
-      <%= render 'shared/brand_press_footer' %>
-    <% end %>
-  <% elsif defined?(@presenter.subdomain) %>
-    <% if %w[leverpress barpublishing].include? @presenter.subdomain %>
-      <%= render 'shared/brand_press_footer_custom' %>
-    <% else %>
-      <%= render 'shared/brand_press_footer' %>
-    <% end %>
-  <% elsif defined?(@presenter.parent.subdomain) %>
-    <% if %w[leverpress barpublishing].include? @presenter.parent.subdomain %>
+  <% if press_presenter.present? %>
+    <% if %w[leverpress barpublishing].include? press_presenter.subdomain %>
       <%= render 'shared/brand_press_footer_custom' %>
     <% else %>
       <%= render 'shared/brand_press_footer' %>
@@ -36,8 +23,6 @@
   <% else %>
     <%= render 'shared/footer' %>
   <% end %>
-
-
 
 <% end %>
 
