--- a/app/views/shared/_brand_press_bar_custom.html.erb
+++ b/app/views/shared/_brand_press_bar_custom.html.erb
@@ -1,5 +1,5 @@
-<% if press_subdomain.present? %>
-  <% if press_subdomain == 'leverpress' %>
+<% if press_presenter.present? %>
+  <% if press_presenter.subdomain == 'leverpress' %>
     <nav id="brand-bar" class="navbar navbar-default navbar-fixed-top">
   <% else %>
     <nav id="brand-bar" class="navbar navbar-default">
@@ -15,21 +15,18 @@
         <span class="icon-bar"></span>
       </button>
 
-      <% if press_subdomain.present? %>
-        <% press_object = Press.where(subdomain: press_subdomain)&.first # this is less than ideal and will be addressed in HELIO-3311 %>
-        <% if press_subdomain == 'leverpress' %>
-          <a class="navbar-brand" href="<%= press_object&.press_url %>">
-            <%= image_tag "LeverLogo.svg", class: 'navbar-brand-logo', alt: 'Lever Press', height: '70', width: 'auto' %><%= press_object&.name %>
-          </a>
-        <% elsif press_subdomain == 'barpublishing' %>
-        <a class="navbar-brand" href="<%= main_app.press_catalog_path(press_object) %>">
+      <% if press_presenter.subdomain == 'leverpress' %>
+        <a class="navbar-brand" href="<%= press_presenter.url %>">
+          <%= image_tag "LeverLogo.svg", class: 'navbar-brand-logo', alt: 'Lever Press', height: '70', width: 'auto' %><%= press_presenter.name %>
+        </a>
+      <% elsif press_presenter.subdomain == 'barpublishing' %>
+        <a class="navbar-brand" href="<%= main_app.press_catalog_path(press_presenter.press) %>">
             <%= image_tag "bar-digital-logo.png", class: 'navbar-brand-logo', alt: 'BAR Publishing', height: '70', width: 'auto' %>
         </a>
-        <% elsif press_subdomain == 'mps' %>
-        <a class="navbar-brand" href="<%= press_object&.press_url %>">
-            <%= image_tag "mps.png", class: 'navbar-brand-logo', alt: '', height: '40', width: 'auto' %><%= press_object&.name %>
-          </a>
-        <% end %>
+      <% elsif press_presenter.subdomain == 'mps' %>
+        <a class="navbar-brand" href="<%= press_presenter.url %>">
+          <%= image_tag "mps.png", class: 'navbar-brand-logo', alt: '', height: '40', width: 'auto' %><%= press_presenter.name %>
+        </a>
       <% end %>
     </div>
 
@@ -37,12 +34,11 @@
 
     <div class="collapse navbar-collapse" id="brand-bar-nav">
       <div class="navbar-right">
-        <% if navigation_block(press_subdomain).present? %>
-          <%= navigation_block(press_subdomain).html_safe %>
+        <% if press_presenter.navigation_block.present? %>
+          <%= press_presenter.navigation_block.html_safe %>
         <% end %>
-        <% if press_subdomain.present? %>
-        <% press_object = Press.where(subdomain: press_subdomain)&.first # this is less than ideal and will be addressed in HELIO-3311 %>
-          <% if press_subdomain == 'mps' %>
+        <% if press_presenter.present? %>
+          <% if press_presenter.subdomain == 'mps' %>
             <% if current_user && show_site_actions? %>
               <%= render 'shared/my_actions' %>
             <% elsif current_institutions? %>
